# mimalloc-rust

./: .gitmodules  Cargo.toml  License.md  README.md  build.rs
.github/workflows/: rust.yml
mimalloc-rust-sys/: .gitignore  Cargo.toml  build.rs
mimalloc-rust-sys/c_src/: .gitignore
mimalloc-rust-sys/c_src/mimalloc/: LICENSE
mimalloc-rust-sys/c_src/mimalloc/include/: mimalloc-types.h
mimalloc-rust-sys/mimalloc/include/: CommonCrypto.h
mimalloc-rust-sys/mimalloc/src/: random.c
mimalloc-rust-sys/src/: aligned_allocation.rs  basic_allocation.rs  extended_functions.rs  heap.rs  lib.rs  runtime_options.rs  types.rs
mimalloc-sys/: Cargo.toml  build.rs
mimalloc-sys/src/: aligned_allocation.rs  basic_allocation.rs  extended_functions.rs  heap.rs  lib.rs  runtime_options.rs  utils.rs
src/: heap.rs  lib.rs  test.rs
src/tests/: heap.rs  mod.rs
