[package]
name = "mimalloc-rust"
version = "0.1.1"
edition = "2018"
repository = "https://github.com/lemonhx/mimalloc-rust"
description = "the best binding for mimalloc in rust"
license = "MIT"

[workspace]
members = ["mimalloc-rust-sys"]

[dev-dependencies]
lazy_static = "1.4.0"

[dependencies]
mimalloc-rust-sys = "1.7.2"
cty = "0.2"
