[package]
name = "mimalloc-rust"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/lemonhx/mimalloc-rust"
description = "the best binding for mimalloc in rust"
license = "MIT"

[workspace]
members = ["mimalloc-rust-sys"]

[dev-dependencies]
lazy_static = "1.4.0"

[features]
unstable = []
local-dynamic-tls = ["mimalloc-rust-sys/local-dynamic-tls"]
secure = ["mimalloc-rust-sys/secure"]
asm = ["mimalloc-rust-sys/asm"]
skip-collect-on-exit = ["mimalloc-rust-sys/skip-collect-on-exit"]

[dependencies]
mimalloc-rust-sys = {path="./mimalloc-rust-sys", version = "2.1.2-source"}
cty = "0.2"
